@@ -1712,19 +1712,21 @@ Set XTerm Parameters. 8-bit ST: 0x9c, 7-bit ST sequence: ESC \ (0x1b,
 <tr><td>Ps = 18</td><td>Change colour of bold characters to Pt</td></tr>
 <tr><td>Ps = 19</td><td>Change colour of underlined characters to Pt</td></tr>
 <tr><td>Ps = 20</td><td>Change default background to Pt</td></tr>
-<tr><td>Ps = 39</td><td>Change default foreground colour to Pt rxvt compile-time option</td></tr>
+<tr><td>Ps = 39</td><td>Change default foreground colour to Pt.</td></tr>
 <tr><td>Ps = 46</td><td>Change Log File to Pt unimplemented</td></tr>
-<tr><td>Ps = 49</td><td>Change default background colour to Pt rxvt compile-time option</td></tr>
+<tr><td>Ps = 49</td><td>Change default background colour to Pt.</td></tr>
 <tr><td>Ps = 50</td><td>Set fontset to Pt, with the following special values of Pt (rxvt) #+n change up n #-n change down n if n is missing of 0, a value of 1 is used empty change to font0 n change to font n</td></tr>
 <tr><td>Ps = 55</td><td>Log all scrollback buffer and all of screen to Pt</td></tr>
-<tr><td>Ps = 701</td><td>Change current locale to Pt, or, if Pt is ?, return the current locale (rxvt extension)</td></tr>
-<tr><td>Ps = 703</td><td>Menubar command Pt rxvt compile-time option (rxvt-unicode extension)</td></tr>
+<tr><td>Ps = 701</td><td>Change current locale to Pt, or, if Pt is ?, return the current locale (Compile frills).</td></tr>
+<tr><td>Ps = 703</td><td>Menubar command Pt (Compile menubar).</td></tr>
 <tr><td>Ps = 704</td><td>Change colour of italic characters to Pt</td></tr>
-<tr><td>Ps = 705</td><td>Change background pixmap tint colour to Pt</td></tr>
+<tr><td>Ps = 705</td><td>Change background pixmap tint colour to Pt (Compile transparency).</td></tr>
 <tr><td>Ps = 710</td><td>Set normal fontset to Pt. Same as Ps = 50.</td></tr>
-<tr><td>Ps = 711</td><td>Set bold fontset to Pt. Similar to Ps = 50.</td></tr>
-<tr><td>Ps = 712</td><td>Set italic fontset to Pt. Similar to Ps = 50.</td></tr>
-<tr><td>Ps = 713</td><td>Set bold-italic fontset to Pt. Similar to Ps = 50.</td></tr>
+<tr><td>Ps = 711</td><td>Set bold fontset to Pt. Similar to Ps = 50 (Compile styles).</td></tr>
+<tr><td>Ps = 712</td><td>Set italic fontset to Pt. Similar to Ps = 50 (Compile styles).</td></tr>
+<tr><td>Ps = 713</td><td>Set bold-italic fontset to Pt. Similar to Ps = 50 (Compile styles).</td></tr>
+<tr><td>Ps = 720</td><td>Move viewing window up by Pt lines, or clear scrollback buffer if Pt = 0 (Compile frills).</td></tr>
+<tr><td>Ps = 721</td><td>Move viewing window down by Pt lines, or clear scrollback buffer if Pt = 0 (Compile frills).</td></tr>
 </table><p></p></dl>
 <p></p>
 <p>
@@ -2779,7 +2781,7 @@ in combination with other switches) is:</p>
   settable extra linespacing
   iso-14755-2 and -3, and visual feedback
   backindex and forwardindex escape sequence
-  window op and locale change escape sequences
+  window op and some xterm/OSC escape sequences
   tripleclickwords
   settable insecure mode
   keysym remapping support
