@@ -15,6 +15,8 @@ WISH: just for fun, do shade and tint with XRender.
 	- use XmbSetWMProperties instead of XSetWMProperties.
 	- properly update WM_LOCALE.
         - implement _NET_WM_PING protocol.
+        - implemented escape sequences to move the scrollback buffer view
+          and clear the scrollback buffer.
 
 5.2  Sun Feb 20 01:48:59 CET 2005
 	- new option -pty-fd that makes the terminal a slave
